test/compiler/e4x/Regress/InvalidXMLNameErr.err

[Compiler] Error #1104: invalid xml name
   InvalidXMLNameErr.as, Ln 5, Col 1: 
   </blah>
   ^

[Compiler] Error #1084: Syntax error: expecting xmltagendend before end of program.
   InvalidXMLNameErr.as, Ln 6, Col 9: 
   </root>;
   ........^

[Compiler] Error #1100: Syntax error: XML does not have matching begin and end tags.
   InvalidXMLNameErr.as, Ln 6, Col 9: 
   </root>;
   ........^

3 errors found
